Update for Milking The Moon

--- a/about-algara.html
+++ b/about-algara.html
@@ -1,141 +1,160 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-
-<head>
+  <head>
     <title>Gorana Dance</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  </head>
 
-<body class="is-preload">
-
+  <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <span><img src="images/logo.jpg" alt="" /></span>
+          </header>
 
-        <!-- Main -->
-        <div id="main">
-            <div class="inner">
+          <!-- Content -->
+          <section>
+            <header class="main">
+              <h2>About Algara Folk Dance Group</h2>
+            </header>
+            <p>
+              Algara Folk Dance Group is a Bulgarian folk dance collective founded in 2018 by Galina
+              Saharova and a group of enthusiastic Bulgarian women living in New Jersey. The group's
+              goal is to present their appreciation of Bulgarian folk traditions to larger
+              audiences. The group performs at festivals in New York, New Jersey, Pennsylvania and
+              Illinois.
+            </p>
 
-                <!-- Header -->
-                <header id="header">
-                    <span><img src="images/logo.jpg" alt="" /></span>
-                </header>
+            <span class="image main"><img src="images/algara.jpg" alt="" /></span>
 
-                <!-- Content -->
-                <section>
-                    <header class="main">
-                        <h2>About Algara Folk Dance Group</h2>
-                    </header>
-                    <p>
-                        Algara Folk Dance Group is a Bulgarian folk dance collective founded in 2018 by Galina Saharova
-                        and a group of enthusiastic Bulgarian women living in New Jersey. The group's goal is to present
-                        their appreciation of Bulgarian folk traditions to larger audiences.
-                    </p>
-                    <p>
-                        Galina began dancing in Bulgaria in her adolescent years and performed in numerous concerts and
-                        festivals with the "Guslarche" company. She is the choreographer of Algara's repertoire as well
-                        as a dancer in both Algara Folk Dance Group and GORANA DANCE.
-                    </p>
+            <h2>Members</h2>
+            <p><i>Listed alphabetically by last name:</i></p>
+            <ul>
+              <li>Maria Bonevelly</li>
+              <li>Albena Chernaeva</li>
+              <li>Vessela Djogova</li>
+              <li>Virginiya Grigorova</li>
+              <li>Bisera Iliev</li>
+              <li>Krasimira Mladenova</li>
+              <li>Inna Ognianova-Chorlev</li>
+              <li>Vessela Patchedjieva</li>
+              <li>Maria Rosenberg</li>
+              <li>Galina Saharova (Choreographer)</li>
+              <li>Iskra Simidchieva</li>
+              <li>Toska Stoianova</li>
+              <li>Kalina Todorova-Suarez</li>
+              <li>Tanya Vergieva</li>
+            </ul>
+          </section>
 
-                    <span class="image main"><img src="images/algara.jpg" alt="" /></span>
-
-                    <h2>Members</h2>
-                    <p><i>Listed alphabetically by last name:</i></p>
-                    <ul>
-                        <li>Maria Bonevelly</li>
-                        <li>Albena Chernaeva</li>
-                        <li>Vessela Djogova</li>
-                        <li>Virginiya Grigorova</li>
-                        <li>Bisera Iliev</li>
-                        <li>Krasimira Mladenova</li>
-                        <li>Galina Natchev</li>
-                        <li>Vessela Patchedjieva</li>
-                        <li>Maria Rosenberg</li>
-                        <li>Galina Saharova</li>
-                        <li>Iskra Simidchieva</li>
-                        <li>Ioana Spiridonov</li>
-                        <li>Toska Stoianova</li>
-                        <li>Kalina Todorova-Suarez</li>
-                        <li>Tanya Vergieva</li>
-                        <li>Spassena Yantchev</li>
-                    </ul>
-                </section>
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h2>Galina Saharova</h2>
+              </header>
+              <p>
+                Galina's dance experience comes from dancing with her children's group in her town
+                of Gorna Oryahovitsa in Bulgaria. She joined GORANA DANCE in 2010 as a dancer before
+                becoming Elissaveta's assistant folk dance teacher. Together, they taught K-12
+                Bulgarian-American students.
+              </p>
+              <p>
+                In 2018, Galina took over teaching the student group and also founded the Algara
+                Folk Dance Group. She is the choreographer of Algara's repertoire as well as a
+                dancer in both Algara and GORANA DANCE.
+              </p>
             </div>
+            <span class="image object profile2">
+              <img src="images/galina.jpg" alt="" />
+            </span>
+          </section>
         </div>
+      </div>
 
-        <!-- Sidebar -->
-        <div id="sidebar">
-            <div class="inner">
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <span class="opener">Milking The Moon</span>
+                <ul>
+                  <li><a href="index.html">Concert Information</a></li>
+                  <li><a href="program.html">Program</a></li>
+                  <li><a href="credits.html">Credits</a></li>
+                </ul>
+              </li>
+              <li>
+                <span class="opener">About</span>
+                <ul>
+                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="about-algara.html">Algara Dance</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="trailers.html">Trailers</a></li>
+              <li>
+                <span class="opener">Past Concerts</span>
+                <ul>
+                  <li>
+                    <a href="roses-across-the-sea.html">Roses Across The Sea</a>
+                    <a href="orenda.html">Orenda: The Collective Power</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
 
-                <!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li>
-							<span class="opener">Roses Across The Sea</span>
-							<ul>
-								<li><a href="index.html">Concert Information</a></li>
-								<li><a href="program.html">Program</a></li>
-								<li><a href="credits.html">Credits</a></li>
-							</ul>
-						</li>
-						<li>
-							<span class="opener">About</span>
-							<ul>
-								<li><a href="about-gorana.html">Gorana Dance</a></li>
-                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
-								<li><a href="about-algara.html">Algara Dance</a></li>
-							</ul>
-						</li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="trailers.html">Trailers</a></li>
-						<li>
-							<span class="opener">Past Concerts</span>
-							<ul>
-								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Contact Info</h2>
+            </header>
+            <ul class="contact">
+              <li class="icon brands fa-facebook-square">
+                <a href="https://www.facebook.com/goranadance">facebook.com/goranadance</a>
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
+              </li>
+              <li class="icon solid fa-hand-holding-heart">
+                <a
+                  href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476"
+                  >Donate to the collective</a
+                >
+              </li>
+            </ul>
+          </section>
 
-                <!-- Section -->
-                <section>
-                    <header class="major">
-                        <h2>Contact Info</h2>
-                    </header>
-                    <ul class="contact">
-                        <li class="icon brands fa-facebook-square"><a
-                                href="https://www.facebook.com/goranadance">facebook.com/goranadance</a></li>
-                        <li class="icon solid fa-envelope"><a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
-                        </li>
-                        <li class="icon solid fa-hand-holding-heart"><a
-                                href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476">Donate
-                                to the collective</a>
-                        </li>
-                    </ul>
-                </section>
-
-                <!-- Footer -->
-                <footer id="footer">
-                    <p class="copyright">Template adapted from <a href="https://html5up.net/editorial"
-                            target="_blank">HTML5 Up</a> under the
-                        <br>
-                        <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative
-                            Commons Attribution 3.0 License</a>
-                    </p>
-                </footer>
-            </div>
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">
+              Template adapted from
+              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
+              <br />
+              <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                >Creative Commons Attribution 3.0 License</a
+              >
+            </p>
+          </footer>
         </div>
-
+      </div>
     </div>
 
     <!-- Scripts -->
@@ -144,7 +163,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
