--- a/index.html
+++ b/index.html
@@ -1,214 +1,244 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+  <head>
+    <title>Gorana Dance</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-	<title>Gorana Dance</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="icon" type="image/x-icon" href="images/favicon.png">
-	<link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <span><img src="images/logo.jpg" alt="" /></span>
+          </header>
 
-<body class="is-preload">
+          <!-- Banner -->
+          <section>
+            <div class="row">
+              <div class="col-6 col-12-small">
+                <h1>Milking The Moon: Becoming The Renewal</h1>
+                <p>
+                  <br />
+                  <strong>Milking The Moon: Becoming The Renewal</strong> is an upcoming live
+                  performance of Bulgarian folk dances & songs as part of the 7th GORANA
+                  International Dance festival.
+                </p>
+                <p>
+                  Ancient Bulgarian culture paved the way for the festivals and traditions that are
+                  still alive in Bulgaria today. Life, health, love and joy are represented by
+                  water, wheat, greenery, flowers and more in ritual dancing. In the spring, seeds
+                  are planted in the ground to sustain the renewal of life. Rich in beauty,
+                  cheerfulness, mysteries and fiery dances with beautiful costumes, Bulgarian
+                  folklore must be seen, heard and experienced!
+                </p>
+                <p>
+                  There are many Bulgarian holidays and traditions dedicated to the spring and
+                  summer. A few of them are:
+                </p>
+                <p>
+                  <strong>Lazarovden</strong> is celebrated on the Saturday before Easter. It is the
+                  "coming of age" celebration for young girls known as "lazarki". The maidens are
+                  dressed in colorful costumes with wreaths of flowers in their hair, and sing and
+                  dance with handkerchieves as they go from home to home to cleanse the spaces.
+                </p>
+                <p>
+                  <strong>Tsvetnitsa</strong> is "The Flower's Day". On the Sunday one week before
+                  Easter, Bulgarians bring home twigs from willow trees and use them to decorate
+                  gates, doors and windows as a sign of faith.
+                </p>
+                <p>
+                  <strong>Velikden</strong> is Easter, the main holiday for all Orthodox Christians.
+                  It is connected to the first full moon after the spring solstice day.
+                </p>
+                <p>
+                  <strong>Saint George's Day</strong> is on May 6th. On this day, unmarried young
+                  women are invited onto decorated swings, as it is believed that the swinging will
+                  help them get married. Along with that, everyone with the name Georgi or Gergana
+                  celebrates their name day.
+                </p>
+                <p>
+                  <strong>Nestinarstvo</strong> is an ancient ritual where fire dancers known as
+                  "nestinari" walk and dance on live embers. It originates from Thracian sun worship
+                  asking the Sun God for health, prosperity and fertility in the new year.
+                </p>
+              </div>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+              <div class="col-6 col-12-small" style="display: flex; align-items: center">
+                <img
+                  src="images/moon.jpg"
+                  style="max-width: 90%; margin-left: auto; margin-right: auto; margin-bottom: 40px"
+                  alt=""
+                />
+                <p>&nbsp;</p>
+              </div>
 
-		<!-- Main -->
-		<div id="main">
-			<div class="inner">
+              <div class="col-12" style="text-align: center">
+                <h3>Date:</h3>
+                <p>Sunday, March 30, 2025 (3:00 PM - 5:00 PM)</p>
+                <h3>Location:</h3>
+                <p>
+                  <a href="https://maps.app.goo.gl/vGETt4R45vvtdtku9">
+                    The Riverside Theatre
+                    <br />
+                    (91 Claremont Avenue, New York, NY, 10027)
+                  </a>
+                </p>
+              </div>
 
-				<!-- Header -->
-				<header id="header">
-					<span><img src="images/logo.jpg" alt="" /></span>
-				</header>
+              <div class="col-4 col-12-medium"></div>
+              <div class="col-4 col-12-medium" style="text-align: center">
+                <ul class="actions fit">
+                  <li>
+                    <a
+                      href="https://gorana-international-folk-dance-festival.ticketbud.com/milking-the-moon"
+                      target="_blank"
+                      class="button primary fit"
+                      >Get tickets</a
+                    >
+                  </li>
+                  <li>
+                    <a href="program.html" class="button primary fit">See the program</a>
+                  </li>
+                </ul>
 
-				<!-- Banner -->
-				<section>
+                <p>
+                  <i
+                    >Thank you to the Lower Manhattan Cultural Council Creative Engagement funds,
+                    Tianaderrah Foundation, and private donors for the great support in the past 5
+                    years!</i
+                  >
+                </p>
+              </div>
+              <div class="col-4 col-12-medium"></div>
+            </div>
+          </section>
 
-					<div class="row">
+          <section>
+            <div class="row">
+              <div class="col-6 col-12-small" style="display: flex; align-items: center">
+                <img
+                  src="images/eli1.jpg"
+                  style="max-width: 80%; margin-left: auto; margin-right: auto; margin-bottom: 40px"
+                  alt=""
+                />
+                <p>&nbsp;</p>
+              </div>
 
-						<div class="col-6 col-12-small">
-							<h1>Roses Across The Sea</h1>
-							<p>
-								<br>
-								<strong>Roses Across The Sea</strong> is a live performance of Bulgarian and Georgian folk dances & songs
-								as part of the 6<sup>th</sup> GORANA International Dance festival. The rose is the national flower of both
-								Bulgaria and Georgia, as well as the state flower of New York. Roses will be an integrative part of
-								the performance as decoration and props in some dances.
-							</p>
-							<blockquote>
-								It might well be said of this beautiful flower, that nature has exhausted herself in trying to lavish on
-								it the freshness of beauty, form, perfume, brilliancy, and grace. <br>
-								<div style="text-align: right;">— Charlotte de la Tour</div>
-							</blockquote>
-							<p>
-								In everything from mythology and literature to religion and politics, the rose has been prized for its beauty
-								and continues to be strongly associated as the most symbolically rich flower. The red rose is the queen of all
-								roses with its symbolism for passion, deep desire and romantic love dating back to ancient times. The white rose is
-								associated with reverence, truth and new beginnings like marriage. The pink rose is associated with admiration,
-								gentleness, elegance, sweetness and happiness.
-							</p>
-							<p>
-								In Bulgaria, the rose is often found in embroideries and local art. Every June, local Bulgarian communities in
-								the Rose Valley organize the Rose Festival with the Rose Queen contest. On the coronation day, the whole city
-								flows to the streets where the Rose Parade is held. A group of men carry the Rose Queen who is wreathed in
-								pink and showers guests with petals. As a rule, the holiday ends in the late evening with a big "horo" line dance
-								in which everyone takes part.
-							</p>
-							
-						</div>
+              <div class="col-6 col-12-small">
+                <h2>A note from Elissaveta</h2>
+                <h4><i>Artistic Director, Producer & Choreographer</i></h4>
 
-						<div class="col-6 col-12-small" style="display:flex; align-items:center;">
-							<img src="images/rose.jpg" style="max-width:60%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
-							<p>&nbsp;</p>
-						</div>
+                <p>
+                  Each performer in <strong>Milking The Moon: Becoming The Renewal</strong> holds a
+                  passion, in his or her own way, for exploring the new meanings and relevance of
+                  traditional practices in our contemporary world thousands of miles away from
+                  Bulgaria.
+                </p>
+                <p>
+                  On a professional level, we look for interdisciplinary links. On a personal level,
+                  we see our engagement in Bulgarian folk art not only as vital sharing of our
+                  artistic expression, but also as a way to connect our roots with our new home in
+                  the US, helping young Bulgarian-Americans born here build a relationship with
+                  their origins.
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
 
-						<div class="col-12" style="text-align:center;">
-							<h3>Date:</h3>
-							<p>Sunday, October 22, 2023 (4:00 PM - 5:30 PM)</p>
-							<h3>Location:</h3>
-							<p>
-								<a href="https://maps.app.goo.gl/hdrkrJMyk3yKgsSB9">
-									Marlene Meyerson JCC Manhattan
-									<br>
-									(334 Amsterdam Ave, New York, NY 10023)
-								</a>
-							</p>
-						</div>
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <span class="opener">Milking The Moon</span>
+                <ul>
+                  <li><a href="index.html">Concert Information</a></li>
+                  <li><a href="program.html">Program</a></li>
+                  <li><a href="credits.html">Credits</a></li>
+                </ul>
+              </li>
+              <li>
+                <span class="opener">About</span>
+                <ul>
+                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="about-algara.html">Algara Dance</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="trailers.html">Trailers</a></li>
+              <li>
+                <span class="opener">Past Concerts</span>
+                <ul>
+                  <li>
+                    <a href="roses-across-the-sea.html">Roses Across The Sea</a>
+                    <a href="orenda.html">Orenda: The Collective Power</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
 
-						<div class="col-4 col-12-medium"></div>
-						<div class="col-4 col-12-medium" style="text-align:center;">
-							<ul class="actions fit">
-								<li>
-									<a href="https://gorana-international-folk-dance-festival.ticketbud.com/gorana-sixth-int-l-dance-festival-roses-across-the-sea-"
-										target="_blank" class="button primary fit">Get tickets</a>
-								</li>
-								<li>
-									<a href="program.html" class="button primary fit">See the program</a>
-								</li>
-							</ul>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Contact Info</h2>
+            </header>
+            <ul class="contact">
+              <li class="icon brands fa-facebook-square">
+                <a href="https://www.facebook.com/goranadance">facebook.com/goranadance</a>
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
+              </li>
+              <li class="icon solid fa-hand-holding-heart">
+                <a
+                  href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476"
+                  >Donate to the collective</a
+                >
+              </li>
+            </ul>
+          </section>
 
-							<p>
-								<i>Thank you to the Lower Manhattan Cultural Council Creative Engagement funds, Tianaderrah Foundation,
-								and private donors for the great support in the past 5 years!</i>
-							</p>
-						</div>
-						<div class="col-4 col-12-medium"></div>
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">
+              Template adapted from
+              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a>
+              under the
+              <br />
+              <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                >Creative Commons Attribution 3.0 License</a
+              >
+            </p>
+          </footer>
+        </div>
+      </div>
+    </div>
 
-					</div>
-
-				</section>
-
-				<section>
-				<div class="row">
-					<div class="col-6 col-12-small" style="display:flex; align-items:center;">
-						<img src="images/eli1.jpg" style="max-width:80%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
-						<p>&nbsp;</p>
-					</div>
-
-					<div class="col-6 col-12-small">
-						<h2>A note from Elissaveta</h2>
-						<h4><i>Artistic Director, Producer & Choreographer</i></h4>
-
-						<p>
-							Each performer in <strong>Roses Across The Sea</strong> holds a passion, in his or her own way,
-							for exploring the new meanings and relevance of traditional practices in our contemporary world
-							thousands of miles away from Bulgaria.
-						</p>
-						<p>
-							On a professional level, we look for interdisciplinary links. On a personal level, we see
-							our engagement in Bulgarian folk art not only as vital sharing of our artistic expression,
-							but also as a way to connect our roots with our new home in the US, helping young
-							Bulgarian-Americans born here build a relationship with their origins.
-						</p>
-					</div>
-				</div>
-				</section>
-
-			</div>
-		</div>
-
-		<!-- Sidebar -->
-		<div id="sidebar">
-			<div class="inner">
-
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li>
-							<span class="opener">Roses Across The Sea</span>
-							<ul>
-								<li><a href="index.html">Concert Information</a></li>
-								<li><a href="program.html">Program</a></li>
-								<li><a href="credits.html">Credits</a></li>
-							</ul>
-						</li>
-						<li>
-							<span class="opener">About</span>
-							<ul>
-								<li><a href="about-gorana.html">Gorana Dance</a></li>
-								<li><a href="about-dancing-crane.html">Dancing Crane</a></li>
-								<li><a href="about-algara.html">Algara Dance</a></li>
-							</ul>
-						</li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="trailers.html">Trailers</a></li>
-						<li>
-							<span class="opener">Past Concerts</span>
-							<ul>
-								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Contact Info</h2>
-					</header>
-					<ul class="contact">
-						<li class="icon brands fa-facebook-square"><a
-								href="https://www.facebook.com/goranadance">facebook.com/goranadance</a></li>
-						<li class="icon solid fa-envelope"><a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
-						</li>
-						<li class="icon solid fa-hand-holding-heart"><a
-								href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476">Donate
-								to the collective</a>
-						</li>
-					</ul>
-				</section>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<p class="copyright">Template adapted from <a href="https://html5up.net/editorial"
-							target="_blank">HTML5 Up</a> under the
-						<br>
-						<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative
-							Commons Attribution 3.0 License</a>
-					</p>
-				</footer>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
