--- a/credits.html
+++ b/credits.html
@@ -1,290 +1,120 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+  <head>
+    <title>Gorana Dance</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-	<title>Gorana Dance</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="icon" type="image/x-icon" href="images/favicon.png">
-	<link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <span><img src="images/logo.jpg" alt="" /></span>
+          </header>
 
-<body class="is-preload">
+          <!-- Banner -->
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h1>Credits</h1>
+                <p>Coming soon!</p>
+              </header>
+            </div>
+          </section>
+        </div>
+      </div>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <span class="opener">Milking The Moon</span>
+                <ul>
+                  <li><a href="index.html">Concert Information</a></li>
+                  <li><a href="program.html">Program</a></li>
+                  <li><a href="credits.html">Credits</a></li>
+                </ul>
+              </li>
+              <li>
+                <span class="opener">About</span>
+                <ul>
+                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="about-algara.html">Algara Dance</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="trailers.html">Trailers</a></li>
+              <li>
+                <span class="opener">Past Concerts</span>
+                <ul>
+                  <li>
+                    <a href="roses-across-the-sea.html">Roses Across The Sea</a>
+                    <a href="orenda.html">Orenda: The Collective Power</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
 
-		<!-- Main -->
-		<div id="main">
-			<div class="inner">
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Contact Info</h2>
+            </header>
+            <ul class="contact">
+              <li class="icon brands fa-facebook-square">
+                <a href="https://www.facebook.com/goranadance">facebook.com/goranadance</a>
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
+              </li>
+              <li class="icon solid fa-hand-holding-heart">
+                <a
+                  href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476"
+                  >Donate to the collective</a
+                >
+              </li>
+            </ul>
+          </section>
 
-				<!-- Header -->
-				<header id="header">
-					<span><img src="images/logo.jpg" alt="" /></span>
-				</header>
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">
+              Template adapted from
+              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
+              <br />
+              <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                >Creative Commons Attribution 3.0 License</a
+              >
+            </p>
+          </footer>
+        </div>
+      </div>
+    </div>
 
-				<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h1>Credits</h1>
-						</header>
-				</section>
-
-				<!-- Section -->
-				<section>
-					<div class="features">
-						<article>
-							<div class="content">
-								<h3>GORANA DANCE</h3>
-								<ul>
-									<li>Mariya Dimitrova</li>
-									<li>Chavdar Dobranov</li>
-									<li>Evgeni Dobranov</li>
-									<li>Angelika Glogov</li>
-									<li>Lily Grantcharova</li>
-									<li>Jianying Hu</li>
-									<li>Elissaveta Iordanova (Choreographer)</li>
-									<li>Iva Iordanova</li>
-									<li>Assia Mihov</li>
-									<li>Hristo Mihovski</li>
-									<li>Elena Miteva</li>
-									<li>Andre Moutafov</li>
-									<li>Inna Ognianova-Chorlev</li>
-									<li>Nadia Petkova</li>
-									<li>Venci Petkova</li>
-									<li>Emilia Pironkova</li>
-									<li>Galina Saharova</li>
-									<li>Tsvetina Stoyanova</li>
-									<li>Guergana Stoyantcheva</li>
-									<li>Mihaela Stoyantcheva</li>
-									<li>Gannie Tzoneva</li>
-								</ul>
-							</div>
-						</article>
-						<article>
-							<div class="content">
-								<h3>Dancing Crane Georgian Dance</h3>
-								<ul>
-									<li>Sofiko Alania</li>
-									<li>Girogi Alimbarashvili </li>
-									<li>Evelina Alimbarashvili </li>
-									<li>Natalia Dabrundashvili </li>
-									<li>Nana Davitadze</li>
-									<li>Keso Goleteani </li>
-									<li>Elene Machavariani</li>
-									<li>Tengiz Qobalia</li>
-									<li>Malkhaz Shubitidze</li>
-									<li>Ilia Svianaidze </li>
-									<li>Levan Torchinava </li>
-									<li>Tamar Tsivilashvili </li>
-								</ul>
-
-								<h5>&nbsp;</h5>
-
-								<h3>Costumes & Props</h3>
-								<ul>
-									<li>Emilia Pironkova (Large Wreath Design & Production)</li>
-									<li>Elissaveta Iordanova (Head Decor)</li>
-									<li>Galina Saharova (Head Decor)</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Singer</h3>
-								<ul>
-									<li>Sofiko Alania</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Artistic Director, Producer & Choreographer</h3>
-								<ul>
-									<li>Elissaveta Iordanova</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Stage Manager</h3>
-								<ul>
-									<li>Iva Iordanova</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>House Managers & Ticket Check-In</h3>
-								<ul>
-									<li>Aneta Genova</li>
-									<li>Margarita Markova</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>AV Director</h3>
-								<ul>
-									<li>Matt Temkin</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Lights</h3>
-								<ul>
-									<li>Mike Taylor</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Sound</h3>
-								<ul>
-									<li>Keaton Comiskey</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Stage & Technical Assistant</h3>
-								<ul>
-									<li>Lily Grantcharova</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Photography</h3>
-								<ul>
-									<li>Blagovest Petkov</li>
-								</ul>
-							</div>
-						</article>
-
-						<article>
-							<div class="content">
-								<h3>Videographer & Video Editor</h3>
-								<ul>
-									<li>Oscar Heredia / Nova Star Media</li>
-								</ul>
-							</div>
-						</article>
-						
-						<article>
-							<div class="content">
-								<h3>Website</h3>
-								<ul style="margin:0 0 1em 0;">
-									<li>Evgeni Dobranov<br></li>
-								</ul>
-								<p>
-									<i style="font-size:80%;">
-										Template adapted from <a href="https://html5up.net/editorial"
-											target="_blank">HTML5 Up</a> under the
-										<br>
-										<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative
-											Commons Attribution 3.0 License</a>
-									</i>
-								</p>
-							</div>
-						</article>
-					</div>
-				</section>
-
-			</div>
-		</div>
-
-		<!-- Sidebar -->
-		<div id="sidebar">
-			<div class="inner">
-
-				<!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li>
-							<span class="opener">Roses Across The Sea</span>
-							<ul>
-								<li><a href="index.html">Concert Information</a></li>
-								<li><a href="program.html">Program</a></li>
-								<li><a href="credits.html">Credits</a></li>
-							</ul>
-						</li>
-						<li>
-							<span class="opener">About</span>
-							<ul>
-								<li><a href="about-gorana.html">Gorana Dance</a></li>
-								<li><a href="about-dancing-crane.html">Dancing Crane</a></li>
-								<li><a href="about-algara.html">Algara Dance</a></li>
-							</ul>
-						</li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="trailers.html">Trailers</a></li>
-						<li>
-							<span class="opener">Past Concerts</span>
-							<ul>
-								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Contact Info</h2>
-					</header>
-					<ul class="contact">
-						<li class="icon brands fa-facebook-square"><a
-								href="https://www.facebook.com/goranadance">facebook.com/goranadance</a></li>
-						<li class="icon solid fa-envelope"><a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
-						</li>
-						<li class="icon solid fa-hand-holding-heart"><a
-								href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476">Donate
-								to the collective</a>
-						</li>
-					</ul>
-				</section>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<p class="copyright">Template adapted from <a href="https://html5up.net/editorial"
-							target="_blank">HTML5 Up</a> under the
-						<br>
-						<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative
-							Commons Attribution 3.0 License</a>
-					</p>
-				</footer>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
