--- a/trailers.html
+++ b/trailers.html
@@ -1,123 +1,130 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-
-<head>
+  <head>
     <title>Gorana Dance</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  </head>
 
-<body class="is-preload">
-
+  <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <span><img src="images/logo.jpg" alt="" /></span>
+          </header>
 
-        <!-- Main -->
-        <div id="main">
-            <div class="inner">
+          <!-- Content -->
+          <section>
+            <header class="main">
+              <h1>Trailers</h1>
+            </header>
 
-                <!-- Header -->
-                <header id="header">
-                    <span><img src="images/logo.jpg" alt="" /></span>
-                </header>
-
-                <!-- Content -->
-                <section>
-                    <header class="main">
-                        <h1>Trailers</h1>
-                    </header>
-
-                    <div class="iframe">
-                        <iframe src="https://www.youtube.com/embed/6vYgV40Sqqk" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <p><br></p>
-                    <div class="iframe">
-                        <iframe src="https://www.youtube.com/embed/Hqi7vgZkchQ" title="YouTube video player"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </section>
-
+            <div class="iframe">
+              <iframe
+                src="https://www.youtube.com/embed/6vYgV40Sqqk"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
-        </div>
-
-        <!-- Sidebar -->
-        <div id="sidebar">
-            <div class="inner">
-
-                <!-- Menu -->
-				<nav id="menu">
-					<header class="major">
-						<h2>Menu</h2>
-					</header>
-					<ul>
-						<li>
-							<span class="opener">Roses Across The Sea</span>
-							<ul>
-								<li><a href="index.html">Concert Information</a></li>
-								<li><a href="program.html">Program</a></li>
-								<li><a href="credits.html">Credits</a></li>
-							</ul>
-						</li>
-						<li>
-							<span class="opener">About</span>
-							<ul>
-								<li><a href="about-gorana.html">Gorana Dance</a></li>
-                                <li><a href="about-dancing-crane.html">Dancing Crane</a></li>
-								<li><a href="about-algara.html">Algara Dance</a></li>
-							</ul>
-						</li>
-						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="trailers.html">Trailers</a></li>
-						<li>
-							<span class="opener">Past Concerts</span>
-							<ul>
-								<li><a href="orenda.html">Orenda: The Collective Power</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-
-                <!-- Section -->
-                <section>
-                    <header class="major">
-                        <h2>Contact Info</h2>
-                    </header>
-                    <ul class="contact">
-                        <li class="icon brands fa-facebook-square"><a
-                                href="https://www.facebook.com/goranadance">facebook.com/goranadance</a></li>
-                        <li class="icon solid fa-envelope"><a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
-                        </li>
-                        <li class="icon solid fa-hand-holding-heart"><a
-                                href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476">Donate
-                                to the collective</a>
-                        </li>
-                    </ul>
-                </section>
-
-                <!-- Footer -->
-                <footer id="footer">
-                    <p class="copyright">Template adapted from <a href="https://html5up.net/editorial"
-                            target="_blank">HTML5 Up</a> under the
-                        <br>
-                        <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative
-                            Commons Attribution 3.0 License</a>
-                    </p>
-                </footer>
+            <p><br /></p>
+            <div class="iframe">
+              <iframe
+                src="https://www.youtube.com/embed/Hqi7vgZkchQ"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
+          </section>
         </div>
+      </div>
 
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <span class="opener">Milking The Moon</span>
+                <ul>
+                  <li><a href="index.html">Concert Information</a></li>
+                  <li><a href="program.html">Program</a></li>
+                  <li><a href="credits.html">Credits</a></li>
+                </ul>
+              </li>
+              <li>
+                <span class="opener">About</span>
+                <ul>
+                  <li><a href="about-gorana.html">Gorana Dance</a></li>
+                  <li><a href="about-algara.html">Algara Dance</a></li>
+                </ul>
+              </li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="trailers.html">Trailers</a></li>
+              <li>
+                <span class="opener">Past Concerts</span>
+                <ul>
+                  <li>
+                    <a href="roses-across-the-sea.html">Roses Across The Sea</a>
+                    <a href="orenda.html">Orenda: The Collective Power</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Contact Info</h2>
+            </header>
+            <ul class="contact">
+              <li class="icon brands fa-facebook-square">
+                <a href="https://www.facebook.com/goranadance">facebook.com/goranadance</a>
+              </li>
+              <li class="icon solid fa-envelope">
+                <a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
+              </li>
+              <li class="icon solid fa-hand-holding-heart">
+                <a
+                  href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476"
+                  >Donate to the collective</a
+                >
+              </li>
+            </ul>
+          </section>
+
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">
+              Template adapted from
+              <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
+              <br />
+              <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                >Creative Commons Attribution 3.0 License</a
+              >
+            </p>
+          </footer>
+        </div>
+      </div>
     </div>
 
     <!-- Scripts -->
@@ -126,7 +133,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
